--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "framer-motion": "^11.0.6",
+    "gh-pages": "^6.1.1",
+    "next": "14.1.0",
     "react": "18",
-    "react-dom": "18",
-    "next": "14.1.0"
+    "react-dom": "18"
   },
   "devDependencies": {
     "autoprefixer": "10.0.1",
-    "postcss": "8",
-    "tailwindcss": "3.3.0",
     "eslint": "8",
-    "eslint-config-next": "14.1.0"
-  }
+    "eslint-config-next": "14.1.0",
+    "postcss": "8",
+    "tailwindcss": "3.3.0"
+  },
+  "homepage": "https://karenfggutierrez.github.io/portfolio"
 }
