Added details to every component

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lama-dev-portfolio-starter",
+  "name": "karen-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
+    "framer-motion": "^11.0.6",
+    "gh-pages": "^6.1.1",
+    "next": "14.1.0",
     "react": "18",
-    "react-dom": "18",
-    "next": "14.1.0"
+    "react-dom": "18"
   },
   "devDependencies": {
     "autoprefixer": "10.0.1",
-    "postcss": "8",
-    "tailwindcss": "3.3.0",
     "eslint": "8",
-    "eslint-config-next": "14.1.0"
-  }
+    "eslint-config-next": "14.1.0",
+    "postcss": "8",
+    "tailwindcss": "3.3.0"
+  },
+  "homepage": "https://karenfggutierrez.github.io/portfolio"
 }
