--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gh-pages": "^6.1.1",
     "next": "14.1.0",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "autoprefixer": "10.0.1",
