--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "next": "14.1.0",
     "react": "18",
     "react-dom": "18",
-    "react-router-dom": "^6.22.1"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.1",
+    "react-scroll": "^1.9.0",
+    "react-scroll-up": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "10.0.1",
