New username updates

--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
     "postcss": "8",
     "tailwindcss": "3.3.0"
   },
-  "homepage": "https://karenfggutierrez.github.io/portfolio"
+  "homepage": "https://karengonzalezdev.github.io/portfolio"
 }
